--- a/Report.ipynb
+++ b/Report.ipynb
@@ -16,7 +16,7 @@
     "The DDPG agent is equipped with an actor network (with local and target version) and a critic network (with local and target version). The actor network learns the optimal policy deterministically. The optimal policy maps any given state to the best believed action for this state :\n",
     "$$ s \\rightarrow \\mu(s ; \\theta_{\\mu}) $$\n",
     "The critic network approximates the Q-value function that maps a state and to its value :\n",
-    "$$ s \\rightarrow Q(s, \\mu(s ; \\theta_{\\mu}; \\theta_{Q}) $$\n",
+    "$$ s \\rightarrow Q(s, \\mu(s ; \\theta_{\\mu}); \\theta_{Q}) $$\n",
     "\n",
     "The agent runs episodes of interactions with the environment and learns periodically from its past interactions :\n",
     "At each step, the agent :\n",
@@ -42,7 +42,7 @@
     ">> $ \\theta_{\\mu_{target}} = \\tau * \\theta_{\\mu_{local}} + (1 - \\tau) * \\theta_{\\mu_{target}}$ <br>\n",
     ">> $ \\theta_{Q_{target}} = \\tau * \\theta_{Q_{local}} + (1 - \\tau) * \\theta_{Q_{target}}$<br>\n",
     "\n",
-    "The target networks are used by the critic to produce a prediction of the qvalue $\\hat{q}$ while the local networks are used to produce the estimates of the qvalue of current state and action $q$ and estimates of best action $\\tilde{a}$ and corresponding qvalue $\\tilde{q}$. Only the parameters of the local networks $\\theta_{\\mu_{local}})$ , $\\theta_{Q_{local}})$ are learnt. The parameters of the target networks follow those of the local networks using soft updates.\n",
+    "The target networks are used by the critic to produce a prediction of the qvalue $\\hat{q}$ while the local networks are used to produce the estimates of the qvalue of current state and action $q$ and estimates of best action $\\tilde{a}$ and corresponding qvalue $\\tilde{q}$. Only the parameters of the local networks ($\\theta_{\\mu_{local}}$ , $\\theta_{Q_{local}}$) are learnt. The parameters of the target networks follow those of the local networks using soft updates.\n",
     "   \n",
     "\n",
     "### Implementation\n",
