Corrected typo in Report.ipynb

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -15,7 +15,7 @@
     "- off policy : the policy is not learnt from the current interactions with the environment but from samples of past interactions\n",
     "The DDPG agent is equipped with an actor network (with local and target version) and a critic network (with local and target version). The actor network learns the optimal policy deterministically. The optimal policy maps any given state to the best believed action for this state :\n",
     "$$ s \\rightarrow \\mu(s ; \\theta_{\\mu}) $$\n",
-    "The critic network approximates the Q-value function that maps a state and to its value :\n",
+    "The critic network approximates the Q-value function that maps a state and action to its value :\n",
     "$$ s \\rightarrow Q(s, \\mu(s ; \\theta_{\\mu}); \\theta_{Q}) $$\n",
     "\n",
     "The agent runs episodes of interactions with the environment and learns periodically from its past interactions :\n",
